# Qlab-MCP

./: .gitignore  OSC Queries.txt  PROJECT_SKILLS.md  QLab's OSC Dictionary.txt  README.md  pyproject.toml
skills/fastmcp-python/: SKILL.md
skills/fastmcp-python/agents/: openai.yaml
skills/fastmcp-python/references/: fastmcp-quick-guide.md  official-docs-index.md
skills/qlab-5-manual/: SKILL.md
skills/qlab-5-manual/agents/: openai.yaml
skills/qlab-5-manual/references/: official-docs-map.md  qlab-5-learning-guide.md
skills/qlab-osc-guide/: SKILL.md
skills/qlab-osc-guide/agents/: openai.yaml
skills/qlab-osc-guide/references/: osc-queries.txt  qlab-osc-dictionary.txt  reference-index.md
src/qlab_mcp/: __init__.py  allowlist.py  client.py  config.py  errors.py  models.py  osc.py  qlab.py  server.py
src/qlab_mcp/cues/: __init__.py  details.py  editorial.py  index.py  overview.py  profiles.py  query.py  refs.py
src/qlab_mcp/osc/: __init__.py  addressing.py  client.py  messages.py
src/qlab_mcp/runtime/: __init__.py  connection.py  read_cache.py
src/qlab_mcp/settings/: __init__.py  redaction.py  summarizers.py  workspace.py
src/qlab_mcp/write/: __init__.py  allowlist.py  operations.py  registry.py  safety.py
tests/: test_osc.py  test_qlab_reader.py  test_server_tools.py  test_write_mode.py
