[project]
name = "qlab-mcp"
version = "0.1.0"
description = "FastMCP server for QLab 5 workspace inspection and gated cue creation over OSC."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.3,<4",
    "pydantic>=2.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
qlab-mcp = "qlab_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qlab_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
